# rpico-mpg

./: CMakeLists.txt  LICENSE  README.md  inc_decoder_pulse.pio  incremental_mpg.pio  main.c  mpg_config.h
docs/: rpico-mpg.graffle
